# KByte

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  build.sh  diff.txt
RomBuilder/: CMakeLists.txt  RomBuilder.cpp  RomBuilder.h  assembler.cpp  assembler.h  bytecode.cpp  bytecode.h  interpreter.cpp  interpreter.h  register.h  runtime.h  system_call.h  vm.h
documentation/: bytecodeSpetication.md  exstension.md
examples/: ecluide.xba  ecluide.xbc  example.xba  memory.xba  memory.xbc  test-asm.xba  test-asm.xbc
